# docs/swagger.yaml
@@ -630,6 +630,14 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/internal_api.userResponse'
+        "401":
+          description: Not authenticated
+          schema:
+            $ref: '#/definitions/internal_api.APIResponse'
+        "500":
+          description: Lookup failed
+          schema:
+            $ref: '#/definitions/internal_api.APIResponse'
       security:
       - BearerAuth: []
       summary: Get current user
